hphp/hack/test/typecheck/reactive/print_in_rx6.php
<?hh // strict

interface Rx {}

class A {
  <<__RxIfImplements(Rx::class)>>
  public function f(): void {
    // should be error
    echo 1;
  }
}
